[package]
name = "goldfish"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
# glob = "0.3.3"
# grep = "0.3.2"
ignore = "0.4.23"
nucleo = "0.5.0"

[[bin]]
path = "src/main.rs"
name = "gf"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
